# match_mobile_robotics_jazzy

./: .gitmodules  README.md  ROS2_setup.sh  ros2.repos
fws_robot_description/config/: fws_robot_config.rviz
fws_robot_description/gazebo/: mir_robot.gazebo.xacro
fws_robot_description/robots/: mir_600.gazebo.urdf  mir_600.urdf.xacro
fws_robot_sim/: CMakeLists.txt  package.xml
fws_robot_sim/launch/: fws_robot_spawn.launch.py
fws_robot_sim/scripts/: repub.py  repub_twist.py
mir_actions/: package.xml
mir_description/launch/: mir_debug_urdf.launch
mir_description/rviz/: mir_visu_full.rviz
mir_driver/: package.xml  setup.py
mir_driver/launch/: additions_launch.py  mir_headless_launch.py  mir_launch.py
mir_gazebo/launch/: mir_gazebo_launch.py
mir_msgs/msg/: Event.msg  ExternalRobot.msg  Path.msg  PowerBoardMotorStatus.msg  SoundEvent.msg
mir_navigation/: package.xml
mir_navigation/behavior_trees/: navigate_through_poses_bt.xml
mir_navigation/config/: mir_mapping_async.yaml  mir_mapping_async_sim.yaml  nav_grasping_params.yaml
mir_navigation/launch/: mir_mapping_launch.py  mir_mapping_sim_launch.py  mir_nav_launch.py
mir_navigation/launch/include/: mapping.py
mir_navigation/maps/: fib14_inmotiongrasping1e.pgm  fib14_inmotiongrasping1e.yaml  workspace1_map.yaml
mir_navigation/rviz/: fortress_mapping.rviz  lh_nav_grasping.rviz  nav_fortress.rviz
mir_navigation/scripts/: follow_waypoints.py
mir_restapi/: package.xml  setup.py
mir_restapi/mir_restapi/: mir_restapi_lib.py  mir_restapi_server.py
mir_robot/: CMakeLists.txt  package.xml
mir_robot/mir_actions/: CMakeLists.txt
mir_robot/mir_description/: CMakeLists.txt  package.xml
mir_robot/mir_description/config/: diffdrive_controller.yaml  mur_controllers.yaml
mir_robot/mir_description/launch/: robot_state_publisher.launch
mir_robot/mir_description/ros2_control/: mir_robot.ros2_control.xacro
mir_robot/mir_description/urdf/: mur620.urdf  mur_620.gazebo.xacro
mir_robot/mir_description/urdf/general/: LiDAR.gazebo.xacro  _d435.gazebo.xacro  mir.ros2_control.xacro  plugins.gazebo.xacro  sick_s300.gazebo.xacro
mir_robot/mir_description/urdf/include/: mir_v1.urdf.xacro  sick_s300.urdf.xacro
mir_robot/mir_description/urdf/mir_600/: mir_600.gazebo.urdf  mir_600.gazebo.xacro  mir_600_top_lift.urdf.xacro  (+2 more)
mir_robot/mir_driver/mir_driver/: fake_mir_joint_publisher.py  mir_bridge.py  rosbridge.py  tf_remove_child_frames.py
mir_robot/mir_gazebo/: CMakeLists.txt  package.xml
mir_robot/mir_gazebo/launch/: mir_robot_spawn.launch.py  mur_base.launch.py  mur_robot_spawn.launch.py
mir_robot/mir_gazebo/rviz/: mir600.rviz
mir_robot/mir_gazebo/worlds/: maze.world
mir_robot/mir_msgs/: CMakeLists.txt  package.xml
mir_robot/mir_msgs/msg/: Error.msg  ExternalRobots.msg  MirExtra.msg  Proximity.msg  ResourcesState.msg  RobotMode.msg  RobotState.msg  UserPrompt.msg  WorldModel.msg
mir_robot/mir_navigation/: CMakeLists.txt
mir_robot/mir_navigation/behavior_trees/: navigate_in_straight_line_bt.xml  navigate_to_pose_w_replanning_and_recovery.xml
mir_robot/mir_navigation/config/: mapping_fortress.yaml  mir_mapping_async_namespaced.yaml  mir_mapping_async_sim_namespaced.yaml  mir_nav_params.yaml  mir_nav_params_namespaced.yaml  nav_fortress_params.yaml
mir_robot/mir_navigation/launch/: mir_mapping_fortress.launch.py  mir_nav_fortress.launch.py  mir_nav_sim_launch.py  navigate_grasping_path.launch.py
mir_robot/mir_navigation/maps/: workspace1_map.pgm
mir_robot/mir_navigation/scripts/: waypoint_generator.py
mir_robot/mir_restapi/: README.md
mir_robot/mir_restapi/mir_restapi/: mir_restapi_sync_time.py
mir_robot/sdc21x0/: CMakeLists.txt  package.xml
mir_robot/sdc21x0/msg/: StampedEncoders.msg
mir_robot/urdf/include/: common.gazebo.xacro  mir_v1.urdf.xacro
mur_robot/mur_desciption/: CMakeLists.txt  package.xml
mur_robot/mur_launch_sim/: CMakeLists.txt  package.xml
mur_robot/mur_launch_sim/launch/: multi_mur620.launch.py  mur620.launch.py  mur620_slim.launch.py  mur_base.launch.py  mur_base_slim.launch.py
mur_robot/mur_launch_sim/scripts/: moveit_move_to_home.py  run_mur.sh
mur_robot/mur_moveit_config/: CMakeLists.txt  package.xml
mur_robot/mur_moveit_config/config/: joint_limits.yaml  joint_limits_ur.yaml  moveit_controllers.yaml  moveit_cpp.yaml
mur_robot/mur_moveit_config/launch/: mur620.launch.py  ur_moveit.launch.py
mur_robot/mur_moveit_config/srdf/: mur620.srdf.xacro
mur_robot/scripts/: run_mur.sh
sdc21x0/srv/: Flags.srv
urdf/: mir.urdf
velocity_pub/scripts/: robot_control.py
(+5 files in other folders)
