<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_restapi</name>
  <version>1.1.3</version>
  <description>ROS server node and client node that implements calls to the Mir REST API</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="soenke.niemann@ipk.fraunhofer.de">Sönke Niemann</author>

  <license>BSD</license>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
