<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_msgs</name>
  <version>1.1.3</version>
  <description>Message definitions for the MiR robot</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">https://github.com/dfki-ric/mir_robot</url>
  <url type="repository">https://github.com/dfki-ric/mir_robot</url>
  <url type="bugtracker">https://github.com/dfki-ric/mir_robot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
